Bug 1679933 - Call EnsureNSSInitializedChromeOrContent() during nsHttpHandler initialization. r=dragana, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D101782